--- a/app/index.html
+++ b/app/index.html
@@ -1,26 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-	<meta charset="UTF-8">
-	<title>Document</title>
-	<link rel="stylesheet" href="css/libs.min.css">
-	<link rel="stylesheet" href="css/main.css">
+    <meta charset="utf-8">
+    <meta charset="windows-1251">
+    <title>Document</title>
+    <link rel="stylesheet" href="css/libs.min.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	
-	<section class="wrapper">
-		<ul class="list-item">
-			<li>1</li>
-			<li>2</li>
-			<li>3</li>
-		</ul>
-	</section>
 
-	<p><img src="img/1.jpg" alt="Alt"></p>
-	<p><img src="img/2.jpg" alt="Alt"></p>
-	<p><img src="img/3.jpg" alt="Alt"></p>
+<section class="wrapper">
 
-	<script src="js/libs.min.js"></script>
+
+    <div class="d-flex">
+        <h1>Ты сегодня покормил кота?</h1>
+        <ul class="list-item">
+
+            <li>1
+                <div class="cat-photo"></div>
+                <div class="package-wrapper">
+                    <div class="package-weight">0,5<span>кг</span>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div class="cat-photo"></div>
+                <div class="package-wrapper">
+                    <div class="package-weight">2,5<span>кг</span>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div class="cat-photo"></div>
+                <div class="package-wrapper">
+                    <div class="package-weight">2,5<span>кг</span>
+                    </div>
+                </div>
+            </li>
+        </ul>
+    </div>
+</section>
+
+<p><img src="img/1.jpg" alt="Alt"></p>
+<p><img src="img/2.jpg" alt="Alt"></p>
+<p><img src="img/3.jpg" alt="Alt"></p>
+
+<script src="js/libs.min.js"></script>
 
 
 </body>
