--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,6 @@
 <html lang="ru">
 <head>
     <meta charset="utf-8">
-    <meta charset="windows-1251">
     <title>Document</title>
     <link rel="stylesheet" href="css/libs.min.css">
     <link rel="stylesheet" href="css/main.css">
@@ -15,37 +14,71 @@
     <div class="d-flex">
         <h1>Ты сегодня покормил кота?</h1>
         <ul class="list-item">
-
-            <li>1
+            <li>
+                <div class="border-wrapper">
+                    <div class="top-text">
+                        <p class="first-line">Сказачное заморское ясвто</p>
+                        <h3>Нямушка</h3>
+                        <h5>с фуагра</h5>
+                        <p class="addition">
+                            <span class="bold">40</span> порций<br>
+                            <span class="bold">2</span> мышки в подарок
+                        </p>
+                    </div>
+                    <div class="cat-photo"></div>
+                    <div class="package-wrapper">
+                        <div class="package-weight">0,5<span>кг</span>
+                        </div>
+                    </div>
+                </div>
+                <p>Чего сидишь? Порадуй котэ, <a href="#">купи</a></p>
+            </li>
+            <li>
+                <div class="selected border-wrapper">
+                    <div class="top-text">
+                        <p class="first-line">Сказачное заморское ясвто</p>
+                        <h3>Нямушка</h3>
+                        <h5>с рыбой</h5>
+                        <p class="addition">
+                            <span class="bold">40</span> порций<br>
+                            <span class="bold">2</span> мышки в подарок
+                        </p>
+                    </div>
+                    <div class="cat-photo"></div>
+                    <div class="package-wrapper">
+                        <div class="package-weight">0,5<span>кг</span>
+                        </div>
+                    </div>
+                </div>
+                <p>Головы щучьи с чесноком да свежайшая сёмгушка.</p>
+            </li>
+            <li>
+            <div class="disabled border-wrapper">
+                <div class="top-text">
+                    <p class="first-line">Сказачное заморское ясвто</p>
+                    <h3>Нямушка</h3>
+                    <h5>с курой</h5>
+                    <p class="addition">
+                        <span class="bold">40</span> порций<br>
+                        <span class="bold">2</span> мышки в подарок
+                    </p>
+                </div>
                 <div class="cat-photo"></div>
                 <div class="package-wrapper">
                     <div class="package-weight">0,5<span>кг</span>
                     </div>
                 </div>
-            </li>
-            <li>
-                <div class="cat-photo"></div>
-                <div class="package-wrapper">
-                    <div class="package-weight">2,5<span>кг</span>
-                    </div>
-                </div>
-            </li>
-            <li>
-                <div class="cat-photo"></div>
-                <div class="package-wrapper">
-                    <div class="package-weight">2,5<span>кг</span>
-                    </div>
-                </div>
-            </li>
+            </div>
+            <p>Филе из цыплят с трюфелями в бульоне.</p>
+        </li>
+
         </ul>
     </div>
 </section>
 
-<p><img src="img/1.jpg" alt="Alt"></p>
-<p><img src="img/2.jpg" alt="Alt"></p>
-<p><img src="img/3.jpg" alt="Alt"></p>
 
 <script src="js/libs.min.js"></script>
+<script src="js/common.js"></script>
 
 
 </body>
