--- a/app/index.html
+++ b/app/index.html
@@ -14,65 +14,92 @@
     <div class="d-flex">
         <h1>Ты сегодня покормил кота?</h1>
         <ul class="list-item">
-            <li>
-                <div class="border-wrapper">
-                    <div class="top-text">
-                        <p class="first-line">Сказачное заморское ясвто</p>
-                        <h3>Нямушка</h3>
-                        <h5>с фуагра</h5>
-                        <p class="addition">
-                            <span class="bold">40</span> порций<br>
-                            <span class="bold">2</span> мышки в подарок
-                        </p>
-                    </div>
-                    <div class="cat-photo"></div>
-                    <div class="package-wrapper">
-                        <div class="package-weight">0,5<span>кг</span>
+            <li class="element disabled">
+                <div class="element__wrapper">
+                    <div class="element__content">
+                        <div class="element__describing">
+                            <p class="element__subtitle">
+                                Сказочное заморское яство
+                            </p>
+                            <p class="element__subtitle element__subtitle--selected">
+                                Котэ не одобряет?
+                            </p>
+                            <h3 class="element__title">Нямушка</h3>
+                            <span class="element__key-title">с фуа-гра</span>
+
+                            <p class="addition">
+                                <span class="bold">10</span> порций<br>
+                                мышь в подарок
+                            </p>
+                        </div>
+                        <div class="element__bg"></div>
+                        <div class="element__weight_wrapper">
+                            <div class="element__weight">0,5<span>кг</span>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <p>Чего сидишь? Порадуй котэ, <a href="#">купи</a></p>
+                <p class="text"></p>
             </li>
-            <li>
-                <div class="selected border-wrapper">
-                    <div class="top-text">
-                        <p class="first-line">Сказачное заморское ясвто</p>
-                        <h3>Нямушка</h3>
-                        <h5>с рыбой</h5>
-                        <p class="addition">
-                            <span class="bold">40</span> порций<br>
-                            <span class="bold">2</span> мышки в подарок
-                        </p>
-                    </div>
-                    <div class="cat-photo"></div>
-                    <div class="package-wrapper">
-                        <div class="package-weight">0,5<span>кг</span>
+            <li class="element">
+                <div class="element__wrapper">
+                    <div class="element__content">
+                        <div class="element__describing">
+                            <p class="element__subtitle">
+                                Сказочное заморское яство
+                            </p>
+                            <p class="element__subtitle element__subtitle--selected">
+                                Котэ не одобряет?
+                            </p>
+                            <h3 class="element__title">Нямушка</h3>
+                            <span class="element__key-title">с рыбой</span>
+
+                            <p class="addition">
+                                <span class="bold">40</span> порций<br>
+                                2 мыши в подарок
+                            </p>
+                        </div>
+                        <div class="element__bg"></div>
+                        <div class="element__weight_wrapper">
+                            <div class="element__weight">2<span>кг</span>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <p>Головы щучьи с чесноком да свежайшая сёмгушка.</p>
+                <p class="text"></p>
+
             </li>
-            <li>
-            <div class="disabled border-wrapper">
-                <div class="top-text">
-                    <p class="first-line">Сказачное заморское ясвто</p>
-                    <h3>Нямушка</h3>
-                    <h5>с курой</h5>
-                    <p class="addition">
-                        <span class="bold">40</span> порций<br>
-                        <span class="bold">2</span> мышки в подарок
-                    </p>
-                </div>
-                <div class="cat-photo"></div>
-                <div class="package-wrapper">
-                    <div class="package-weight">0,5<span>кг</span>
+            <li class="element disabled">
+                <div class="element__wrapper">
+                    <div class="element__content">
+                        <div class="element__describing">
+                            <p class="element__subtitle">
+                                Сказочное заморское яство
+                            </p>
+                            <p class="element__subtitle element__subtitle--selected">
+                                Котэ не одобряет?
+                            </p>
+                            <h3 class="element__title">Нямушка</h3>
+                            <span class="element__key-title">с курой</span>
+
+                            <p class="addition">
+                                <span class="bold">100</span> порций<br>
+                                5 мышей  в подарок<br>
+                                заказчик доволен
+                            </p>
+                        </div>
+                        <div class="element__bg"></div>
+                        <div class="element__weight_wrapper">
+                            <div class="element__weight">5<span>кг</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <p>Филе из цыплят с трюфелями в бульоне.</p>
-        </li>
+                <p class="text"></p>
+            </li>
 
         </ul>
+        <h1 id="spec"></h1>
     </div>
 </section>
 
