перенос less на watcher gulp

--- a/app/index.html
+++ b/app/index.html
@@ -11,10 +11,10 @@
 <section class="wrapper">
 
 
-    <div class="d-flex">
+    <div class="content">
         <h1>Ты сегодня покормил кота?</h1>
         <ul class="list-item">
-            <li class="element disabled">
+            <li class="element">
                 <div class="element__wrapper">
                     <div class="element__content">
                         <div class="element__describing">
