подключение шрифтов для IE

--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Document</title>
     <link rel="stylesheet" href="css/libs.min.css">
+   <!-- <link rel="stylesheet" href="css/style.min.css">-->
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -18,12 +19,14 @@
                 <div class="element__wrapper">
                     <div class="element__content">
                         <div class="element__describing">
-                            <p class="element__subtitle">
-                                Сказочное заморское яство
-                            </p>
-                            <p class="element__subtitle element__subtitle--selected">
-                                Котэ не одобряет?
-                            </p>
+                            <div class="element__top-line-subtitle subtitle">
+                                <p class="subtitle__def">
+                                    Сказочное заморское яство
+                                </p>
+                                <p class="subtitle__select-hover">
+                                    Котэ не одобряет?
+                                </p>
+                            </div>
                             <h3 class="element__title">Нямушка</h3>
                             <span class="element__key-title">с фуа-гра</span>
 
@@ -45,12 +48,14 @@
                 <div class="element__wrapper">
                     <div class="element__content">
                         <div class="element__describing">
-                            <p class="element__subtitle">
-                                Сказочное заморское яство
-                            </p>
-                            <p class="element__subtitle element__subtitle--selected">
-                                Котэ не одобряет?
-                            </p>
+                            <div class="element__top-line-subtitle subtitle">
+                                <p class="subtitle__def">
+                                    Сказочное заморское яство
+                                </p>
+                                <p class="subtitle__select-hover">
+                                    Котэ не одобряет?
+                                </p>
+                            </div>
                             <h3 class="element__title">Нямушка</h3>
                             <span class="element__key-title">с рыбой</span>
 
@@ -73,12 +78,14 @@
                 <div class="element__wrapper">
                     <div class="element__content">
                         <div class="element__describing">
-                            <p class="element__subtitle">
-                                Сказочное заморское яство
-                            </p>
-                            <p class="element__subtitle element__subtitle--selected">
-                                Котэ не одобряет?
-                            </p>
+                            <div class="element__top-line-subtitle subtitle">
+                                <p class="subtitle__def">
+                                    Сказочное заморское яство
+                                </p>
+                                <p class="subtitle__select-hover">
+                                    Котэ не одобряет?
+                                </p>
+                            </div>
                             <h3 class="element__title">Нямушка</h3>
                             <span class="element__key-title">с курой</span>
 
